--- a/config/crd/bases/replication.storage.openshift.io_volumereplications.yaml
+++ b/config/crd/bases/replication.storage.openshift.io_volumereplications.yaml
@@ -35,9 +35,56 @@ spec:
             type: object
           spec:
             description: VolumeReplicationSpec defines the desired state of VolumeReplication
+            properties:
+              dataSource:
+                description: DataSource represents the object associated with the
+                  image
+                properties:
+                  apiGroup:
+                    description: APIGroup is the group for the resource being referenced.
+                      If APIGroup is not specified, the specified Kind must be in
+                      the core API group. For any other third-party types, APIGroup
+                      is required.
+                    type: string
+                  kind:
+                    description: Kind is the type of resource being referenced
+                    type: string
+                  name:
+                    description: Name is the name of resource being referenced
+                    type: string
+                required:
+                - kind
+                - name
+                type: object
+              imageState:
+                description: ImageState represents the replication operation to be
+                  performed on the image. Supported operations are "primary", "secondary"
+                  and "resync"
+                type: string
+              volumeReplicationClass:
+                description: VolumeReplicationClass is the VolumeReplicationClass
+                  name for this VolumeReplication resource
+                type: string
+            required:
+            - dataSource
+            - imageState
+            - volumeReplicationClass
             type: object
           status:
             description: VolumeReplicationStatus defines the observed state of VolumeReplication
+            properties:
+              lastCompletionTime:
+                format: date-time
+                type: string
+              lastStartTime:
+                format: date-time
+                type: string
+              message:
+                type: string
+              state:
+                description: ReplicationState captures the latest state of the replication
+                  operation
+                type: string
             type: object
         type: object
     served: true
