--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -30,11 +30,11 @@ jobs:
 
     - name: copy volume-replication-operator repo in go src
       run: |
-        mkdir -p /home/runner/go/src/github.com/kube-storage
-        cp -r /home/runner/work/volume-replication-operator/volume-replication-operator /home/runner/go/src/github.com/kube-storage
+        mkdir -p /home/runner/go/src/github.com/csi-addons
+        cp -r /home/runner/work/volume-replication-operator/volume-replication-operator /home/runner/go/src/github.com/csi-addons
 
     - name: run docker-push
-      working-directory: "/home/runner/go/src/github.com/kube-storage/volume-replication-operator"
+      working-directory: "/home/runner/go/src/github.com/csi-addons/volume-replication-operator"
       env:
         GOPATH: /home/runner/go
       run: |
