--- a/config/crd/bases/replication.storage.openshift.io_volumereplicationclasses.yaml
+++ b/config/crd/bases/replication.storage.openshift.io_volumereplicationclasses.yaml
@@ -13,6 +13,8 @@ spec:
     kind: VolumeReplicationClass
     listKind: VolumeReplicationClassList
     plural: volumereplicationclasses
+    shortNames:
+    - vrc
     singular: volumereplicationclass
   scope: Cluster
   versions:
