disable hughParam check of gocritic for the reconciler object
This avoid below error:
  Error: hugeParam: r is heavy (80 bytes); consider passing it by pointer (gocritic)

Signed-off-by: Humble Chirammal <hchiramm@redhat.com>

--- a/.github/workflows/config/lint-config.yml
+++ b/.github/workflows/config/lint-config.yml
@@ -123,6 +123,7 @@ linters-settings:
       - wrapperFunc
       - unnamedResult
       - dupImport # https://github.com/go-critic/go-critic/issues/845
+      - hugeParam
   unused:
     # treat code as a program (not a library) and report unused exported
     # identifiers; default is false.
